--- a/udrive/resources/css/styles.css
+++ b/udrive/resources/css/styles.css
@@ -1,20 +1,16 @@
-html,
-body {
-  height: 100%;
-  margin: 0;
-}
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
-main {
-  flex: 1;
-}
 .text-violet {
   color: #674188; /* Or use a specific hex code, e.g., #8A2BE2 */
 }
 .text-large {
   font-size: 2rem; /* Adjust size as needed */
+}
+.hover-text:hover {
+  color: #674188;
+}
+
+@media (max-width: 991px) {
+  .sidebar {
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(10px);
+  }
 }
