--- a/udrive/resources/css/styles.css
+++ b/udrive/resources/css/styles.css
@@ -9,11 +9,10 @@ body {
   padding: 100px 0;
 }
 .carousel-item {
-  height: 100vh;
-  min-height: 300px;
+  height: 480px;
+  object-fit: cover;
 }
 .carousel-caption {
-  bottom: 220px;
   z-index: 2;
 }
 .carousel-caption h5 {
@@ -52,9 +51,6 @@ body {
   font-size: 20px;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .carousel-caption {
-    bottom: 370px;
-  }
   .carousel-caption p {
     width: 100%;
   }
@@ -81,9 +77,7 @@ body {
     background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(10px);
   }
-  .carousel-caption {
-    bottom: 125px;
-  }
+
   .carousel-caption h5 {
     font-size: 17px;
   }
