--- a/udrive/resources/css/styles.css
+++ b/udrive/resources/css/styles.css
@@ -6,7 +6,7 @@ body {
   background: #f1fbff;
 }
 .section-padding {
-  padding: 100px 0;
+  padding: 80px 0;
 }
 .carousel-item {
   height: 600px;
@@ -108,7 +108,7 @@ body {
 
 /* card background style */
 .faint-green {
-  background-color: rgba(238, 238, 211, 0.1); /* Light green with opacity */
+  background-color: rgba(245, 245, 245, 0.6); /* Light green with opacity */
 }
 /* for smooth scroll  */
 html {
@@ -135,3 +135,82 @@ html {
 .content {
   z-index: 1;
 } */
+
+body {
+  background: #eeeeee;
+  font-family: "Montserrat", sans-serif;
+}
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  /* padding: 10% 0; */
+}
+.review-card {
+  background-color: rgba(245, 245, 245, 0.6); /* Light green with opacity */
+  border-radius: 10px;
+  padding: 10px;
+  width: 300px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+}
+.img-area {
+  width: 80px;
+  height: 80px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 25px;
+}
+.img-area img {
+  width: 100%;
+}
+.header-content {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.info h4 {
+  margin: 0;
+  font-size: 22px;
+  font-weight: 600;
+}
+.info p {
+  margin: 5px 0 0;
+  font-size: 14px;
+  font-weight: 400;
+  color: #666;
+}
+.single-review p {
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #333;
+}
+.review-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #666;
+}
+.rating {
+  display: flex;
+}
+.rating span {
+  color: #000;
+  font-size: 18px;
+}
+.rating span.active {
+  color: #fbc02d;
+}
+@media screen and (max-width: 767px) {
+  .wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .review-card {
+    width: 85%;
+  }
+}
