--- a/udrive/resources/css/styles.css
+++ b/udrive/resources/css/styles.css
@@ -5,11 +5,16 @@
 body {
   background: #f1fbff;
 }
+
+.section-padding-head {
+  padding: 50px 0 80px 0;
+}
+
 .section-padding {
   padding: 80px 0;
 }
 .carousel-item {
-  height: 600px;
+  height: 500px;
 }
 .carousel-caption {
   z-index: 2;
@@ -30,10 +35,10 @@ body {
   content: "";
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: min-content;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.3);
   z-index: 1;
 }
 
@@ -71,14 +76,19 @@ body {
   color: #674188;
 }
 
-@media (max-width: 767px) {
+/* Styles for tablet devices only */
+@media (min-width: 600px) and (max-width: 900px) {
   .sidebar {
     background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(10px);
   }
 
+  .carousel-item {
+    height: 325px;
+  }
+
   .carousel-caption h5 {
-    font-size: 17px;
+    font-size: 16px;
   }
   .carousel-caption a {
     padding: 10px 15px;
@@ -87,7 +97,7 @@ body {
   .carousel-caption p {
     width: 100%;
     line-height: 1.6;
-    font-size: 14px;
+    font-size: 13px;
   }
   .about-text {
     padding-top: 50px;
@@ -97,6 +107,38 @@ body {
   }
 }
 
+/* styles for mobile devices */
+@media (max-width: 767px) {
+  .sidebar {
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(10px);
+  }
+
+  .carousel-item {
+    height: 285px;
+  }
+
+  .carousel-caption h5 {
+    font-size: 16px;
+  }
+  .carousel-caption a {
+    padding: 10px 15px;
+    font-size: 15px;
+  }
+  .carousel-caption p {
+    width: 100%;
+    line-height: 1.6;
+    font-size: 13px;
+  }
+  .about-text {
+    padding-top: 50px;
+  }
+  .card {
+    margin-bottom: 30px;
+  }
+}
+
+/* fade in animation on scroll1 */
 .fade-in {
   opacity: 0;
   transition: opacity 0.96s ease-in;
@@ -104,6 +146,33 @@ body {
 
 .fade-in.visible {
   opacity: 1;
+}
+
+/* fade in animation onLoad */
+@keyframes fadeInOnLoad {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fadeInOnLoad {
+  animation: fadeInOnLoad 0.8s ease-in;
+}
+
+@keyframes fadeInOnLoad-abut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fadeInOnLoad-abut {
+  animation: fadeInOnLoad-abut 2s ease-in;
 }
 
 /* card background style */
